--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,6 @@
 <h1>About</h1>
 <p>課程名稱: 網際內容管理 - Web Content Management</p>
-<p>學員作業網站: (請自行填寫)</p>
+<p>學員作業網站: https://laughing-barnacle-wrgr9jxvrrgp2g6vr-8081.app.github.dev/content/index.html</p>
 <p>學員作業倉儲: https://github.com/mdewcm2025/hw-41323105</p>
 <hr/>
 <p>課程代號: wcm2025</p>
