--- a/content/index.html
+++ b/content/index.html
@@ -143,8 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Tasks.html'>Next</a> >> Tasks<br /><h1>About</h1>
 <p>課程名稱: 網際內容管理 - Web Content Management</p>
-<p>學員作業網站: https://laughing-barnacle-wrgr9jxvrrgp2g6vr-8081.app.github.dev/content/index.html</p>
-<p>學員作業倉儲: https://github.com/mdewcm2025/hw-41323105</p>
+<p>學員作業網站: <a href="https://mdewcm2025.github.io/hw-41323105/content/index.html">https://mdewcm2025.github.io/hw-41323105/content/index.html</a></p>
+<p>學員作業倉儲: <a href="https://github.com/mdewcm2025/hw-41323105">https://github.com/mdewcm2025/hw-41323105</a></p>
 <hr/>
 <p>課程代號: wcm2025</p>
 <p>Teams 線上教學:</p>
