--- a/content/task2.5.html
+++ b/content/task2.5.html
@@ -143,8 +143,15 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3<br /><h1>task2.5</h1>
+<p>IPv6</p>
+<p><img alt="" height="351" src="./../images/螢幕擷取畫面 2025-06-19 094312.png" width="287"/></p>
+<p>選擇IPv6的內容</p>
+<p><img caption="false" height="238" src="./../images/螢幕擷取畫面 2025-06-19 094323.png" width="289"/></p>
 <p></p>
-<br />task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
+<p></p>
+<p></p>
+<p></p>
+<p><a href="https://mdewcm2025.github.io/hw-scrum-1/downloads/account_network_setup.7z"></a></p><br />task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
         
     <!-- footer -->
       <div class="container">
