--- a/config/content.htm
+++ b/config/content.htm
@@ -100,6 +100,10 @@
 <p>選擇IPv6的內容</p>
 <p><img caption="false" height="238" src="/images/螢幕擷取畫面 2025-06-19 094323.png" width="289"/></p>
 <p></p>
+<h2>task3</h2>
+<p></p>
+<h2>task4</h2>
+<p></p>
 <h1>Homework</h1>
 <p>1. 作業 (40%): 從 Github Classroom 取得的個人倉儲與網站, 每週必須至少提交 2 次與課程進度有關的內容.</p>
 <p style="padding-left: 30px;">作業一 (20%): 採用 <a href="https://nginx.org/">nginx</a> 建立全球資訊網伺服器</p>
