--- a/content/task2.5.html
+++ b/content/task2.5.html
@@ -144,11 +144,16 @@ img.add_border {
         </header>
     <div id="tipue_search_content">task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3<br /><h1>task2.5</h1>
 <p>IPv6</p>
+<p>我的學員序號為 24的固定 IPv6 分配: 2001:288:6004:17:fff1:cc25:0000:a024</p>
+<p>註: 利用 Brython<span> </span><a href="https://mde.tw/wcm2025/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/9f3df9d865a7ceca8e799ee9b1a31602/raw/5299aa53dc856df47c98993e016c9c0db2c74edf/2025_spring_set_mde_dns.py">產生</a><span> </span>DNS 伺服器所需的設定.</p>
+<p>完成 dns 設定之後, 序號為 1 的學員其伺服器主機符號名稱為 w1.mde.nfu.edu.tw, 序號 50 則對應 w50.</p>
+<p>利用 hinet dns 伺服器查詢 w1.mde.nfu.edu.tw 以及 w50.nfu.edu.tw 的畫面:</p>
+<p><img alt="" height="339" src="https://mde.tw/wcm2025/images/nslookup_for_w1_w50_mde_nfu_edu_tw.png" width="300"/></p>
+<p>各學員在虛擬主機設定所分配的 IPv6 網址之後, 可以使用對應的符號名稱設定 nginx, cmsimde 作業網站以及 fossil 伺服器.</p>
 <p><img alt="" height="351" src="./../images/螢幕擷取畫面 2025-06-19 094312.png" width="287"/></p>
 <p>選擇IPv6的內容</p>
 <p><img caption="false" height="238" src="./../images/螢幕擷取畫面 2025-06-19 094323.png" width="289"/></p>
-<p></p>
-<br />task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
+<p></p><br />task2 << <a href='task2.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
         
     <!-- footer -->
       <div class="container">
