--- a/content/task4.html
+++ b/content/task4.html
@@ -147,7 +147,8 @@ img.add_border {
 <h4>解析 Reeborg 系統架構</h4>
 <h4>網際內容管理中的 Reeborg</h4>
 <p><a href="https://mdewcm2025.github.io/hw-scrum-1/reeborg/?lang=en&amp;mode=python&amp;menu=/reeborg/worlds/menus/select_collection_en.json&amp;name=Alone&amp;url=/hw-scrum-1/reeborg/worlds/tutorial_en/harvest1.json&amp;editor=/python/harvest1.py">https://mdewcm2025.github.io/hw-scrum-1/reeborg/?lang=en&amp;mode=python&amp;menu=/reeborg/worlds/menus/select_collection_en.json&amp;name=Alone&amp;url=/hw-scrum-1/reeborg/worlds/tutorial_en/harvest1.json&amp;editor=/python/harvest1.py</a></p>
-<p><img alt="" height="301" src="./../images/螢幕擷取畫面 2025-06-19 101036.png" width="271"/></p><br />task3 << <a href='task3.html'>Previous</a> <a href='Homework.html'>Next</a> >> Homework</div>
+<p><img alt="" height="301" src="./../images/螢幕擷取畫面 2025-06-19 101036.png" width="271"/></p>
+<br />task3 << <a href='task3.html'>Previous</a> <a href='Homework.html'>Next</a> >> Homework</div>
         
     <!-- footer -->
       <div class="container">
